--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A repository which implements the React Js docs",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "http-server"
   },
   "repository": {
     "type": "git",
@@ -16,5 +17,8 @@
   "bugs": {
     "url": "https://github.com/design2soft/react-js-concepts/issues"
   },
-  "homepage": "https://github.com/design2soft/react-js-concepts#readme"
+  "homepage": "https://github.com/design2soft/react-js-concepts#readme",
+  "dependencies": {
+    "http-server": "^0.12.3"
+  }
 }
